upgrade ollama container to 1.21.4