@@ -105,6 +105,7 @@
         <version.aws-java-sdk>2.29.15</version.aws-java-sdk>
         <version.graalvm>25.0.2</version.graalvm>
         <version.mockito>5.21.0</version.mockito>
+        <version.ollama>1.21.4</version.ollama>
         <version.maven-compiler>3.13.0</version.maven-compiler>
         <version.maven-surefire>3.5.2</version.maven-surefire>
         <version.maven-source>3.3.1</version.maven-source>
@@ -235,7 +236,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>ollama</artifactId>
-                <version>1.20.0</version>
+                <version>${version.ollama}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -337,6 +338,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.maven-surefire}</version>
+                <configuration>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
+                </configuration>                
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
